September 25, 2010
------------------
- Dropped mux.NewRouter(): new(mux.Router) will work fine.