@@ -1,9 +1,0 @@
-include ${GOROOT}/src/Make.inc
-
-TARG=gorilla.googlecode.com/hg/gorilla/appengine/context
-
-GOFILES=\
-	context.go\
-	doc.go\
-
-include ${GOROOT}/src/Make.pkg
