@@ -1,13 +1,0 @@
-// Copyright 2011 Gorilla Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style
-// license that can be found in the LICENSE file.
-
-package context
-
-import (
-	"testing"
-)
-
-func TestContext(t *testing.T) {
-	// Nothing here, yet. Need to figure how to setup proper stubs.
-}
